--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Vue-Slider</title>
 </head>
 <body>
-  <div class="container">
+  <div id="app" class="container">
     <div class="conteiner-slider">
       <i class="fas fa-chevron-left"></i>
       <img src="img/re-leone.jpg" alt="re-leone">
