--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="app" class="container">
     <div class="conteiner-slider">
       <i class="fas fa-chevron-left"></i>
-      <img src="img/re-leone.jpg" alt="re-leone">
+      <img :src=".img[0].url" alt="re-leone">
       <i class="fas fa-chevron-right"></i>
       <div class="conteiner-bullet">
         <i class="fas fa-circle"></i>
